--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jim Reed",
   "dependencies": {
     "express": "3.2.4",
-    "shelljs": "*"
+    "shelljs": "*",
+    "forever": "*"
   }
 }
