--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
   "dependencies": {
     "express": "3.2.4",
     "shelljs": "*",
-    "forever": "*",
-    "log": "*",
-    "fs": "*"
+    "forever": "*"
   }
 }
