moved to new version of express

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Simple docker deployer",
   "author": "Jim Reed",
   "dependencies": {
-    "express": "3.2.4",
+    "express": "*",
+    "body-parser": "*",
     "shelljs": "*",
     "forever": "*"
   }
